--- a/html/fivetoten.html
+++ b/html/fivetoten.html
@@ -114,6 +114,31 @@ Output: ['apple', 'mango', 'cherry', 'orange']
         <p>Example:
             A blender doesn't run until you press the button. Same with a function it does't run until you call it.
         </p>
+        <p>
+            def greet():
+    print("Hello, welcome to Python!")
+💬 def means define a function
+🧩 greet is the function name
+👁‍🗨 Everything indented (inside the function) runs when you call it.
+To call it - greet() [Write it after defining it. In the code.]
+        </p>
+        <B>Function with Parameters=input</B>
+        <p>Function can take parameters-- small pieces of data you send to it.</p>
+        <p>
+            def greet_user(name):
+    print("Hello", name, "!")
+To call it - greet_user("Oyshi")
+        </p>
+        <b>Function that return a value</b>
+        <p>Sometimes you want the function to calculate something and give it back.</p>
+        <p>
+            Example:
+            def add(a, b):
+                return a + b
+            To call it - result = add(5, 3)
+            print("The sum is:", result)
+        </p>
+        <p><b>return</b>sends the result back to where you called the function</p>
     </div>
 </body>
 </html>
