--- a/html/5-10.html
+++ b/html/5-10.html
@@ -140,5 +140,17 @@ To call it - greet_user("Oyshi")
         </p>
         <p><b>return</b>sends the result back to where you called the function</p>
     </div>
+    <div>
+        <h3>Return values from Function</h3>
+        <p>So far, you’ve used print() inside your functions — meaning they only show results.
+        But what if you want to use the result later in your code?<b>That’s where return comes in.</b></p>
+        <p>
+             Example 1: Without return
+            def add(a, b):
+                print(a + b)
+            
+            add(5, 3)  # Output: 8
+        </p>
+    </div>
 </body>
 </html>
