--- a/html/5-10.html
+++ b/html/5-10.html
@@ -152,5 +152,18 @@ To call it - greet_user("Oyshi")
             add(5, 3)  # Output: 8
         </p>
     </div>
+    <div>
+        <h3>Nested Loops and Combined Logic</h3>
+        <h4>What is Nested Loop</h4>
+        <p>A nested loop means one loop inside another. You used it when you need to repeat something within a repetition for example, printing patterns, comparing lists, or checking conditions.</p>
+        <p>
+            Example:
+            for i in range(3):
+                for j in range(2):
+                    print("i =", i, "j =", j)
+        </p>
+        <p><b>The outer loop controls rows
+        and the inner loop controls columns or repeated actions within each row</b></p>
+    </div>
 </body>
 </html>
